@@ -24,6 +24,9 @@ IN DEVELOPMENT
 
   IMPROVEMENTS:
 
+   * ``annotate`` now doesn't require a working tree. (Lukáš Lalinský,
+     #90049)
+
    * ``branch`` and ``checkout`` can now use files from a working tree to
      to speed up the process.  For checkout, this requires the new
      --files-from flag.  (Aaron Bentley)
